--- a/0x01-Webpack/task_2/package.json
+++ b/0x01-Webpack/task_2/package.json
@@ -12,13 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.2.6",
-    "image-minimizer-webpack-plugin": "^2.2.0",
-    "imagemin-gifsicle": "^7.0.0",
-    "imagemin-jpegtran": "^7.0.0",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
     "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
     "imagemin-pngquant": "^9.0.2",
-    "imagemin-svgo": "^9.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2"
